--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a class="nav-link" href="#tentang">Tentang Kami</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#kontak">Kontak</a>
+                        <a class="nav-link" href="kontak.html">Kontak</a>
                     </li>
                 </ul>
             </div>
@@ -183,18 +183,6 @@
             <h2 class="animate__animated animate__fadeInUp">Tentang Kami</h2>
             <p class="animate__animated animate__fadeIn">Selamat datang di Toko Buah Kami! Kami adalah penyedia buah segar dan berkualitas tinggi yang berkomitmen untuk memberikan yang terbaik kepada pelanggan kami. Kami percaya bahwa kesehatan yang baik dimulai dari makanan yang sehat, dan itulah sebabnya kami hanya menyediakan buah-buahan terbaik yang dipetik langsung dari kebun pilihan. Dengan berbagai pilihan buah yang segar dan lezat, kami siap memenuhi kebutuhan buah Anda setiap hari. Terima kasih telah memilih Toko Buah Kami!</p>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalTentang">Selengkapnya</button>
-        </section>
-
-        <!-- Kontak -->
-        <section id="kontak" class="mt-4">
-            <h2 class="animate__animated animate__fadeInUp">Kontak Kami</h2>
-            <p class="animate__animated animate__fadeIn">Jika Anda memiliki pertanyaan atau ingin memesan buah, jangan ragu untuk menghubungi kami melalui informasi berikut:</p>
-            <ul class="animate__animated animate__fadeIn">
-                <li>Email: info@tokobuah.com</li>
-                <li>Telepon: +62 123 456 789</li>
-                <li>Alamat: Jalan Buah Segar No. 1, Jakarta</li>
-            </ul>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalKontak">Selengkapnya</button>
         </section>
     </main>
     <br>
@@ -324,47 +312,6 @@
                 </div>
                 <div class="modal-body">
                     Semangka adalah buah yang sangat menyegarkan dan mengandung banyak air, sempurna untuk melepas dahaga di hari panas.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modalTentang" tabindex="-1" role="dialog" aria-labelledby="modalTentangLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalTentangLabel">Tentang Kami</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Selamat datang di Toko Buah Kami! Kami adalah penyedia buah segar dan berkualitas tinggi yang berkomitmen untuk memberikan yang terbaik kepada pelanggan kami. Kami percaya bahwa kesehatan yang baik dimulai dari makanan yang sehat, dan itulah sebabnya kami hanya menyediakan buah-buahan terbaik yang dipetik langsung dari kebun pilihan. Dengan berbagai pilihan buah yang segar dan lezat, kami siap memenuhi kebutuhan buah Anda setiap hari. Terima kasih telah memilih Toko Buah Kami!
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modalKontak" tabindex="-1" role="dialog" aria-labelledby="modalKontakLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalKontakLabel">Kontak Kami</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Jika Anda memiliki pertanyaan atau ingin memesan buah, jangan ragu untuk menghubungi kami melalui informasi berikut:<br>
-                    Email: info@tokobuah.com<br>
-                    Telepon: +62 123 456 789<br>
-                    Alamat: Jalan Buah Segar No. 1, Jakarta
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
